Provide the recommended flags to use Error Prone on Java 16+ (#170)