@@ -313,6 +313,21 @@ allprojects {
                         // https://github.com/google/error-prone/issues/436
                         '-Werror',
                 ]
+                if (!isJava8) {
+                    // Options needed for Error Prone on Java 16+, but don't hurt on Java 9+
+                    options.forkOptions.jvmArgs += [
+                        '--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+                        '--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
+                        '--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
+                        '--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
+                        '--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
+                        '--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
+                        '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+                        '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+                        '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+                        '--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
+                    ]
+                }
             } else {
                 options.errorprone.enabled = false
             }
